--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
     <style>
-        body { background-color: #020617; color: #f8fafc; margin: 0; }
+        body { background-color: #020617; color: #f8fafc; margin: 0; overflow: hidden; }
         .scanline {
             width: 100%; height: 4px;
             background: linear-gradient(to bottom, transparent, rgba(34, 211, 238, 0.4), transparent);
-            position: absolute; z-index: 10; top: 0; left: 0;
+            position: fixed; z-index: 100; top: 0; left: 0;
             animation: scan 3s ease-in-out infinite; pointer-events: none;
         }
         @keyframes scan { 0% { top: -10%; } 100% { top: 110%; } }
@@ -24,13 +24,14 @@
     "react/": "https://esm.sh/react@^19.2.4/",
     "@google/genai": "https://esm.sh/@google/genai@^1.41.0",
     "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
-    "vite": "https://esm.sh/vite@^7.3.1"
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4"
   }
 }
 </script>
 </head>
 <body>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="index.tsx"></script>
 </body>
 </html>
