--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         }
         @keyframes scan { 0% { top: -10%; } 100% { top: 110%; } }
     </style>
+<script type="imports">
 {
   "imports": {
     "react": "https://esm.sh/react@^19.2.4",
@@ -31,6 +32,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
